--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>إلى آية ❤️</title>
     <style>
         body { background: #ffc0cb; font-family: 'Arial', sans-serif; text-align: center; color: #d63384; margin: 0; display: flex; align-items: center; justify-content: center; height: 100vh; overflow: hidden; }
-        .container { background: rgba(255, 255, 255, 0.6); padding: 30px; border-radius: 20px; width: 85%; max-width: 400px; box-shadow: 0 10px 20px rgba(0,0,0,0.1); }
+        .container { background: rgba(255, 255, 255, 0.6); padding: 30px; border-radius: 20px; width: 85%; max-width: 400px; box-shadow: 0 10px 20px rgba(0,0,0,0.1); position: relative; }
         .page { display: flex; flex-direction: column; align-items: center; }
         .hidden { display: none; }
         img { width: 180px; border-radius: 15px; margin-bottom: 20px; }
@@ -19,35 +19,41 @@
 <body>
     <div class="container">
         <div id="page1" class="page">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/LpdiF8bQ4K4W4/giphy.gif">
             <h1>هل أنتِ آية؟</h1>
             <button class="btn" onclick="nextPage(2)">نعم، أنا آية ❤️</button>
         </div>
+
         <div id="page2" class="page hidden">
-            <img src="https://media.giphy.com/media/LpdiF8bQ4K4W4/giphy.gif">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/CjmvTCZf2U3p09Cn0h/giphy.gif">
             <p>هلو آية.. عندي سؤال الج..</p>
             <button class="btn" onclick="nextPage(3)">شنو هو؟</button>
         </div>
+
         <div id="page3" class="page hidden">
-            <img src="https://media.giphy.com/media/CjmvTCZf2U3p09Cn0h/giphy.gif">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/26FLdmIp6wJr91JAI/giphy.gif">
             <p>بس مستحي أسألك إياه 🙈</p>
             <button class="btn" onclick="nextPage(4)">اسألني 😠</button>
         </div>
+
         <div id="page4" class="page hidden">
-            <img src="https://media.giphy.com/media/26FLdmIp6wJr91JAI/giphy.gif">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/MDJ9IbxxvDuQM/giphy.gif">
             <h2>تحبين مصطفى لو لا؟! 🤨</h2>
             <div style="display: flex; gap: 10px;">
                 <button class="btn" onclick="nextPage(5)">أي أحبه</button>
                 <button class="btn" id="noBtn" onmouseover="moveBtn()" onclick="moveBtn()">لا</button>
             </div>
         </div>
+
         <div id="page5" class="page hidden">
-            <img src="https://media.giphy.com/media/MDJ9IbxxvDuQM/giphy.gif">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/3o7TKoWXlo3M1nKSgU/giphy.gif">
             <p>دوسي على القلب 👇</p>
             <div class="heart-btn" onclick="nextPage(6)">❤️</div>
         </div>
+
         <div id="page6" class="page hidden">
             <div class="final-text">
-                رقت بوصف جمالك الأقوال.. ورأتك فافتننت بك العذّال<br>
+                رقت بوصف جمالك الأقوال.. ورأتك فافتتنت بك العذّال<br>
                 أعشقك وأحبك للأبد يا أجمل شيء صار بحياتي يا آية ❤️
             </div>
             <p style="font-weight: bold; margin-top: 15px;">من مصطفى إلى آية 🧸</p>
