--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div id="page6" class="page hidden">
             <div class="final-text">
                 رقت بوصف جمالك الأقوال.. ورأتك فافتتنت بك العذّال<br>
-                أعشقك وأحبك للأبد يا أجمل شيء صار بحياتي يا آية ❤️
+                احبك والاهم مو بكيفج ادوسين لا كلشي بكيفياني بس يا آية ❤️
             </div>
             <p style="font-weight: bold; margin-top: 15px;">من مصطفى إلى آية 🧸</p>
         </div>
