--- a/index.html
+++ b/index.html
@@ -5,58 +5,125 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>إلى آية ❤️</title>
     <style>
-        body { background: #ffc0cb; font-family: 'Arial', sans-serif; text-align: center; color: #d63384; margin: 0; display: flex; align-items: center; justify-content: center; height: 100vh; overflow: hidden; }
-        .container { background: rgba(255, 255, 255, 0.6); padding: 30px; border-radius: 20px; width: 85%; max-width: 400px; box-shadow: 0 10px 20px rgba(0,0,0,0.1); position: relative; }
-        .page { display: flex; flex-direction: column; align-items: center; }
+        :root {
+            --pink-primary: #ff69b4;
+            --pink-light: #ffc0cb;
+            --text-dark: #d63384;
+        }
+        body { 
+            background: var(--pink-light); 
+            font-family: 'Arial', sans-serif; 
+            text-align: center; 
+            color: var(--text-dark); 
+            margin: 0; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            height: 100vh; 
+            overflow: hidden; 
+        }
+        .container { 
+            background: rgba(255, 255, 255, 0.85); 
+            padding: 30px; 
+            border-radius: 30px; 
+            width: 85%; 
+            max-width: 400px; 
+            box-shadow: 0 15px 35px rgba(0,0,0,0.1); 
+            border: 3px solid white;
+            position: relative;
+            z-index: 10;
+        }
+        .page { 
+            display: flex; 
+            flex-direction: column; 
+            align-items: center;
+            animation: fadeIn 0.8s ease;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
         .hidden { display: none; }
-        img { width: 180px; border-radius: 15px; margin-bottom: 20px; }
-        .btn { background: #ff69b4; color: white; border: none; padding: 12px 25px; border-radius: 25px; font-size: 18px; margin: 10px; cursor: pointer; font-weight: bold; }
-        .heart-btn { font-size: 80px; animation: pulse 1s infinite; cursor: pointer; }
-        @keyframes pulse { 0% {transform: scale(1);} 50% {transform: scale(1.2);} 100% {transform: scale(1);} }
-        .final-text { background: white; padding: 20px; border-radius: 15px; font-weight: bold; line-height: 1.8; font-size: 1.1em; }
+        img { width: 160px; height: auto; margin-bottom: 20px; border-radius: 10px; }
+        .btn { 
+            background: var(--pink-primary); 
+            color: white; 
+            border: none; 
+            padding: 14px 30px; 
+            border-radius: 50px; 
+            font-size: 18px; 
+            cursor: pointer; 
+            font-weight: bold; 
+            transition: 0.3s;
+            box-shadow: 0 5px 15px rgba(255, 105, 180, 0.4);
+        }
+        .heart-btn { font-size: 80px; cursor: pointer; animation: pulse 1s infinite; }
+        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.15); } 100% { transform: scale(1); } }
+        
+        /* تأثير مطر القلوب */
+        .heart-particle {
+            position: fixed;
+            top: -10%;
+            font-size: 20px;
+            user-select: none;
+            z-index: 1;
+            animation: fall linear forwards;
+        }
+        @keyframes fall {
+            to { transform: translateY(110vh) rotate(360deg); }
+        }
+        
+        .final-text { 
+            background: #fff; 
+            padding: 20px; 
+            border-radius: 20px; 
+            font-weight: bold; 
+            line-height: 1.8; 
+            border: 2px dashed var(--pink-primary);
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <div id="page1" class="page">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/LpdiF8bQ4K4W4/giphy.gif">
-            <h1>هل أنتِ آية؟</h1>
-            <button class="btn" onclick="nextPage(2)">نعم، أنا آية ❤️</button>
+            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/LpdiF8bQ4K4W4/giphy.gif">
+            <h1>هل أنتِ آية؟ ❤️</h1>
+            <button class="btn" onclick="nextPage(2)">نعم، أنا آية</button>
         </div>
 
         <div id="page2" class="page hidden">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/CjmvTCZf2U3p09Cn0h/giphy.gif">
+            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/CjmvTCZf2U3p09Cn0h/giphy.gif">
             <p>هلو آية.. عندي سؤال الج..</p>
-            <button class="btn" onclick="nextPage(3)">شنو هو؟</button>
+            <button class="btn" onclick="nextPage(3)">شنو هو؟ 🤭</button>
         </div>
 
         <div id="page3" class="page hidden">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/26FLdmIp6wJr91JAI/giphy.gif">
+            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/26FLdmIp6wJr91JAI/giphy.gif">
             <p>بس مستحي أسألك إياه 🙈</p>
-            <button class="btn" onclick="nextPage(4)">اسألني 😠</button>
+            <button class="btn" onclick="nextPage(4)">اسألني! 😠</button>
         </div>
 
         <div id="page4" class="page hidden">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/MDJ9IbxxvDuQM/giphy.gif">
+            <img src="https://media.giphy.com/media/MDJ9IbxxvDuQM/giphy.gif">
             <h2>تحبين مصطفى لو لا؟! 🤨</h2>
-            <div style="display: flex; gap: 10px;">
-                <button class="btn" onclick="nextPage(5)">أي أحبه</button>
-                <button class="btn" id="noBtn" onmouseover="moveBtn()" onclick="moveBtn()">لا</button>
+            <div style="display: flex; gap: 15px; justify-content: center;">
+                <button class="btn" onclick="nextPage(5)">أي أحبه ❤️</button>
+                <button class="btn" id="noBtn" onmouseover="moveBtn()" onclick="moveBtn()">لا ❌</button>
             </div>
         </div>
 
         <div id="page5" class="page hidden">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/3o7TKoWXlo3M1nKSgU/giphy.gif">
+            <img src="https://media.giphy.com/media/3o7TKoWXlo3M1nKSgU/giphy.gif">
             <p>دوسي على القلب 👇</p>
-            <div class="heart-btn" onclick="nextPage(6)">❤️</div>
+            <div class="heart-btn" onclick="startHearts(); nextPage(6)">❤️</div>
         </div>
 
         <div id="page6" class="page hidden">
             <div class="final-text">
-                رقت بوصف جمالك الأقوال.. ورأتك فافتتنت بك العذّال<br>
-                احبك والاهم مو بكيفج ادوسين لا كلشي بكيفي اني بس يا آية ❤️
+                احبك واهم شي مو بكيفج دوسين لا كلشي بكيفي اني بس يا آية ❤️
             </div>
-            <p style="font-weight: bold; margin-top: 15px;">من مصطفى إلى آية 🧸</p>
+            <p style="font-weight: bold; margin-top: 20px;">من مصطفى إلى آية 🧸</p>
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/fN9AdT725BwXU5e89V/giphy.gif" style="width: 100px;">
         </div>
     </div>
 
@@ -65,11 +132,24 @@
             document.querySelectorAll('.page').forEach(p => p.classList.add('hidden'));
             document.getElementById('page' + n).classList.remove('hidden');
         }
+
         function moveBtn() {
             const b = document.getElementById('noBtn');
             b.style.position = 'fixed';
-            b.style.left = Math.random() * 80 + '%';
-            b.style.top = Math.random() * 80 + '%';
+            b.style.left = Math.random() * (window.innerWidth - 100) + 'px';
+            b.style.top = Math.random() * (window.innerHeight - 50) + 'px';
+        }
+
+        function startHearts() {
+            setInterval(() => {
+                const heart = document.createElement('div');
+                heart.innerHTML = '❤️';
+                heart.className = 'heart-particle';
+                heart.style.left = Math.random() * 100 + 'vw';
+                heart.style.animationDuration = (Math.random() * 2 + 3) + 's';
+                document.body.appendChild(heart);
+                setTimeout(() => heart.remove(), 5000);
+            }, 300);
         }
     </script>
 </body>
