--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         }
         .container { 
             background: rgba(255, 255, 255, 0.85); 
-            padding: 30px; 
+            padding: 25px; 
             border-radius: 30px; 
             width: 85%; 
-            max-width: 400px; 
+            max-width: 380px; 
             box-shadow: 0 15px 35px rgba(0,0,0,0.1); 
             border: 3px solid white;
             position: relative;
@@ -45,12 +45,12 @@
             to { opacity: 1; transform: translateY(0); }
         }
         .hidden { display: none; }
-        img { width: 160px; height: auto; margin-bottom: 20px; border-radius: 10px; }
+        img { width: 150px; height: auto; margin-bottom: 20px; border-radius: 10px; }
         .btn { 
             background: var(--pink-primary); 
             color: white; 
             border: none; 
-            padding: 14px 30px; 
+            padding: 12px 25px; 
             border-radius: 50px; 
             font-size: 18px; 
             cursor: pointer; 
@@ -87,25 +87,25 @@
 <body>
     <div class="container">
         <div id="page1" class="page">
-            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/LpdiF8bQ4K4W4/giphy.gif">
+            <img src="https://media.tenor.com/On7Vf9vM6X8AAAAi/hello-kitty.gif">
             <h1>هل أنتِ آية؟ ❤️</h1>
             <button class="btn" onclick="nextPage(2)">نعم، أنا آية</button>
         </div>
 
         <div id="page2" class="page hidden">
-            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/CjmvTCZf2U3p09Cn0h/giphy.gif">
+            <img src="https://media.tenor.com/XpAInMIP_p0AAAAi/hello-kitty-my-melody.gif">
             <p>هلو آية.. عندي سؤال الج..</p>
             <button class="btn" onclick="nextPage(3)">شنو هو؟ 🤭</button>
         </div>
 
         <div id="page3" class="page hidden">
-            <img src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/26FLdmIp6wJr91JAI/giphy.gif">
+            <img src="https://media.tenor.com/9v1hPz8_n6sAAAAi/hello-kitty-shy.gif">
             <p>بس مستحي أسألك إياه 🙈</p>
             <button class="btn" onclick="nextPage(4)">اسألني! 😠</button>
         </div>
 
         <div id="page4" class="page hidden">
-            <img src="https://media.giphy.com/media/MDJ9IbxxvDuQM/giphy.gif">
+            <img src="https://media.tenor.com/T09_0P-O97oAAAAi/hello-kitty.gif">
             <h2>تحبين مصطفى لو لا؟! 🤨</h2>
             <div style="display: flex; gap: 15px; justify-content: center; width: 100%; min-height: 80px; align-items: center;">
                 <button class="btn" onclick="nextPage(5)">أي أحبه ❤️</button>
@@ -114,19 +114,19 @@
         </div>
 
         <div id="page5" class="page hidden">
-            <img src="https://media.giphy.com/media/3o7TKoWXlo3M1nKSgU/giphy.gif">
+            <img src="https://media.tenor.com/866p_6Yv890AAAAi/hello-kitty-love.gif">
             <p>دوسي على القلب 👇</p>
             <div class="heart-btn" onclick="startHearts(); nextPage(6)">❤️</div>
         </div>
 
         <div id="page6" class="page hidden">
             <div class="final-text">
-                رقت بوصف جمالك الأقوال.. ورأتك فافتننت بك العذّال<br>
+                رقت بوصف جمالك الأقوال.. ورأتك فافتتنت بك العذّال<br>
                 ومن الإله بك الجمال تجملاً.. حتى كأنك للجمال جمال<br><br>
-                أحبك واهم شي مو بكيفج تختارين لا كلشي بكيفي اني بس يا آية ❤️
+                أحبك واهم شي مو بكيفج تختارين لا لان كلشي بكيفي اني بس يا آية ❤️
             </div>
             <p style="font-weight: bold; margin-top: 15px;">من مصطفى إلى آية 🧸</p>
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/fN9AdT725BwXU5e89V/giphy.gif" style="width: 100px;">
+            <img src="https://media.tenor.com/S-Kiz-7vXmQAAAAi/hello-kitty-sanrio.gif" style="width: 100px;">
         </div>
     </div>
 
