--- a/index.html
+++ b/index.html
@@ -87,25 +87,25 @@
 <body>
     <div class="container">
         <div id="page1" class="page">
-            <img src="https://c.tenor.com/On7Vf9vM6X8AAAAC/hello-kitty.gif" alt="Hello Kitty Wave">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/LpdiF8bQ4K4W4/giphy.gif">
             <h1>هل أنتِ آية؟ ❤️</h1>
             <button class="btn" onclick="nextPage(2)">نعم، أنا آية</button>
         </div>
 
         <div id="page2" class="page hidden">
-            <img src="https://c.tenor.com/XpAInMIP_p0AAAAC/hello-kitty-my-melody.gif" alt="Hello Kitty Friends">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/CjmvTCZf2U3p09Cn0h/giphy.gif">
             <p>هلو آية.. عندي سؤال الج..</p>
             <button class="btn" onclick="nextPage(3)">شنو هو؟ 🤭</button>
         </div>
 
         <div id="page3" class="page hidden">
-            <img src="https://c.tenor.com/9v1hPz8_n6sAAAAC/hello-kitty-shy.gif" alt="Hello Kitty Shy">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/26FLdmIp6wJr91JAI/giphy.gif">
             <p>بس مستحي أسألك إياه 🙈</p>
             <button class="btn" onclick="nextPage(4)">اسألني! 😠</button>
         </div>
 
         <div id="page4" class="page hidden">
-            <img src="https://c.tenor.com/T09_0P-O97oAAAAC/hello-kitty.gif" alt="Hello Kitty Thinking">
+            <img src="https://media.giphy.com/media/MDJ9IbxxvDuQM/giphy.gif">
             <h2>تحبين مصطفى لو لا؟! 🤨</h2>
             <div style="display: flex; gap: 15px; justify-content: center; width: 100%; min-height: 80px; align-items: center;">
                 <button class="btn" onclick="nextPage(5)">أي أحبه ❤️</button>
@@ -114,7 +114,7 @@
         </div>
 
         <div id="page5" class="page hidden">
-            <img src="https://c.tenor.com/866p_6Yv890AAAAC/hello-kitty-love.gif" alt="Hello Kitty Love">
+            <img src="https://media.giphy.com/media/3o7TKoWXlo3M1nKSgU/giphy.gif">
             <p>دوسي على القلب 👇</p>
             <div class="heart-btn" onclick="startHearts(); nextPage(6)">❤️</div>
         </div>
@@ -123,10 +123,10 @@
             <div class="final-text">
                 رقت بوصف جمالك الأقوال.. ورأتك فافتتنت بك العذّال<br>
                 ومن الإله بك الجمال تجملاً.. حتى كأنك للجمال جمال<br><br>
-                أحبك واهم شي مو بكيفج تختارين "لا" لأن كلشي بكيفي اني بس يا آية ❤️
+                أحبك واهم شي مو بكيفج تختارين لا لان كلشي بكيفي اني بس يا آية ❤️
             </div>
             <p style="font-weight: bold; margin-top: 15px;">من مصطفى إلى آية 🧸</p>
-            <img src="https://c.tenor.com/S-Kiz-7vXmQAAAAC/hello-kitty-sanrio.gif" style="width: 100px;" alt="Hello Kitty Final">
+            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/fN9AdT725BwXU5e89V/giphy.gif" style="width: 100px;">
         </div>
     </div>
 
