--- a/index.html
+++ b/index.html
@@ -3,161 +3,368 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إلى آية ❤️</title>
+    <title>إلى آية مع هيلو كيتي 💖</title>
     <style>
+        /* متغيرات الألوان الأساسية */
         :root {
             --pink-primary: #ff69b4;
-            --pink-light: #ffc0cb;
-            --text-dark: #d63384;
+            --pink-light: #ffe4ec;
+            --pink-dark: #d63384;
+            --shadow-sm: 0 10px 25px rgba(0, 0, 0, 0.08);
+            --border-radius-lg: 35px;
         }
-        body { 
-            background: var(--pink-light); 
-            font-family: 'Arial', sans-serif; 
-            text-align: center; 
-            color: var(--text-dark); 
-            margin: 0; 
-            display: flex; 
-            align-items: center; 
-            justify-content: center; 
-            height: 100vh; 
-            overflow: hidden; 
-            touch-action: manipulation;
+
+        /* إعادة تعيين الهوامش وجعل الجسم مركزًا */
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
         }
-        .container { 
-            background: rgba(255, 255, 255, 0.85); 
-            padding: 25px; 
-            border-radius: 30px; 
-            width: 85%; 
-            max-width: 380px; 
-            box-shadow: 0 15px 35px rgba(0,0,0,0.1); 
-            border: 3px solid white;
-            position: relative;
-            z-index: 10;
-        }
-        .page { 
-            display: flex; 
-            flex-direction: column; 
+
+        body {
+            background: linear-gradient(145deg, #fff0f5 0%, #ffb6c1 100%);
+            font-family: 'Segoe UI', 'Arial', sans-serif;
+            min-height: 100vh;
+            display: flex;
             align-items: center;
-            animation: fadeIn 0.8s ease;
+            justify-content: center;
+            margin: 0;
+            overflow-x: hidden;
+            touch-action: pan-y pinch-zoom; /* تحسين اللمس */
         }
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(10px); }
+
+        /* الحاوية الرئيسية */
+        .container {
+            background: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(3px);
+            padding: 25px 20px;
+            border-radius: var(--border-radius-lg);
+            width: 90%;
+            max-width: 400px;
+            box-shadow: var(--shadow-sm);
+            border: 3px solid #ffffffaa;
+            position: relative;
+            z-index: 20;
+            transition: transform 0.2s ease;
+        }
+
+        /* كل صفحة */
+        .page {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+            animation: fadeSlide 0.4s cubic-bezier(0.2, 0.9, 0.3, 1);
+        }
+
+        @keyframes fadeSlide {
+            from { opacity: 0; transform: translateY(12px); }
             to { opacity: 1; transform: translateY(0); }
         }
-        .hidden { display: none; }
-        img { width: 160px; height: auto; margin-bottom: 20px; border-radius: 15px; }
-        .btn { 
-            background: var(--pink-primary); 
-            color: white; 
-            border: none; 
-            padding: 12px 25px; 
-            border-radius: 50px; 
-            font-size: 18px; 
-            cursor: pointer; 
-            font-weight: bold; 
-            transition: 0.3s;
-            box-shadow: 0 5px 15px rgba(255, 105, 180, 0.4);
+
+        .hidden {
+            display: none !important;
         }
-        #noBtn { position: relative; transition: all 0.15s ease; z-index: 100; }
-        .heart-btn { font-size: 80px; cursor: pointer; animation: pulse 1s infinite; margin: 10px; }
-        @keyframes pulse { 0% { transform: scale(1); } 50% { transform: scale(1.15); } 100% { transform: scale(1); } }
-        
+
+        /* تنسيق الصور (كلها هيلو كيتي ثابتة) */
+        .page img {
+            width: 170px;
+            height: auto;
+            max-height: 200px;
+            object-fit: contain;
+            border-radius: 25px;
+            background: #ffffffc0;
+            padding: 8px;
+            box-shadow: 0 8px 20px #ffb6c1;
+            border: 2px solid white;
+        }
+
+        /* الأزرار العامة */
+        .btn {
+            background: var(--pink-primary);
+            color: white;
+            border: none;
+            padding: 14px 32px;
+            border-radius: 60px;
+            font-size: 1.2rem;
+            font-weight: 700;
+            letter-spacing: 0.5px;
+            box-shadow: 0 8px 18px #ff99cc;
+            cursor: pointer;
+            transition: all 0.2s;
+            min-width: 160px;
+            border: 2px solid #fff;
+            touch-action: manipulation;
+        }
+
+        .btn:active {
+            transform: scale(0.96);
+            box-shadow: 0 4px 10px #ff69b4;
+        }
+
+        /* زر "لا" الهارب */
+        #noBtn {
+            position: relative; /* يتحول إلى fixed عند الحركة */
+            transition: left 0.1s ease, top 0.1s ease;
+            background: #ffa07a;
+            box-shadow: 0 8px 18px #f08080;
+            z-index: 999;
+        }
+
+        /* قلب الصفحة الخامسة */
+        .heart-btn {
+            font-size: 90px;
+            line-height: 1;
+            cursor: pointer;
+            animation: softPulse 1.2s infinite ease-in-out;
+            filter: drop-shadow(0 10px 15px #ff69b4);
+            transition: transform 0.2s;
+            margin: 10px;
+        }
+        .heart-btn:active {
+            transform: scale(1.2);
+        }
+
+        @keyframes softPulse {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.1); text-shadow: 0 0 15px hotpink; }
+            100% { transform: scale(1); }
+        }
+
+        /* النص الأخير */
+        .final-text {
+            background: #fff5f9;
+            padding: 25px 18px;
+            border-radius: 30px;
+            font-weight: 600;
+            line-height: 2;
+            border: 3px dotted var(--pink-primary);
+            color: #b0306e;
+            font-size: 1.1rem;
+            box-shadow: inset 0 0 0 3px white, 0 10px 15px #faa0b0;
+        }
+
+        /* جسيمات القلوب المتساقطة */
         .heart-particle {
             position: fixed;
-            top: -10%;
-            font-size: 24px;
-            z-index: 1;
-            animation: fall linear forwards;
+            top: -20px;
+            font-size: 28px;
+            user-select: none;
+            pointer-events: none;
+            z-index: 10;
+            animation: fallRotate linear forwards;
+            filter: drop-shadow(0 5px 8px #ffb6c1);
         }
-        @keyframes fall {
-            to { transform: translateY(110vh) rotate(360deg); }
+
+        @keyframes fallRotate {
+            0% { transform: translateY(0) rotate(0deg); opacity: 1; }
+            100% { transform: translateY(110vh) rotate(360deg); opacity: 0.4; }
         }
-        
-        .final-text { 
-            background: #fff; 
-            padding: 20px; 
-            border-radius: 20px; 
-            font-weight: bold; 
-            line-height: 1.8; 
-            border: 2px dashed var(--pink-primary);
-            font-size: 1.05em;
+
+        /* تحسينات للشاشات الصغيرة */
+        @media (max-width: 420px) {
+            .container { padding: 20px 15px; }
+            .btn { font-size: 1rem; padding: 12px 24px; min-width: 140px; }
+            .page img { width: 140px; }
+            .heart-btn { font-size: 75px; }
         }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- الصفحة 1: التأكيد -->
         <div id="page1" class="page">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/LpdiF8bQ4K4W4/giphy.gif">
-            <h1>هل أنتِ آية؟ ❤️</h1>
-            <button class="btn" onclick="nextPage(2)">نعم، أنا آية</button>
+            <img src="https://i.pinimg.com/originals/7a/4b/3a/7a4b3a2a1b8c6f5e4d3c2b1a0f9e8d7c.png" 
+                 alt="هيلو كيتي لطيفة" 
+                 onerror="this.src='https://via.placeholder.com/200x200/ffc0cb/ff69b4?text=Hello+Kitty'">
+            <h1 style="color: #d63384;">هل أنتِ آية؟ 🐱</h1>
+            <button class="btn" onclick="nextPage(2)">نعم، أنا آية 💕</button>
         </div>
 
+        <!-- الصفحة 2: تمهيد -->
         <div id="page2" class="page hidden">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/CjmvTCZf2U3p09Cn0h/giphy.gif">
-            <p>هلو آية.. عندي سؤال الج..</p>
+            <img src="https://i.pinimg.com/originals/2f/8c/9d/2f8c9d4b3a2c1b0e9f8e7d6c5b4a3f2d.png" 
+                 alt="هيلو كيتي تبتسم"
+                 onerror="this.src='https://via.placeholder.com/200x200/ffe4ec/ff69b4?text=Kitty+Smile'">
+            <p style="font-size: 1.2rem;">هلو آية.. عندي سؤال الج..</p>
             <button class="btn" onclick="nextPage(3)">شنو هو؟ 🤭</button>
         </div>
 
+        <!-- الصفحة 3: خجل -->
         <div id="page3" class="page hidden">
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/26FLdmIp6wJr91JAI/giphy.gif">
+            <img src="https://i.pinimg.com/originals/5e/6b/4a/5e6b4a3f2e1d0c9b8a7f6e5d4c3b2a1f.png" 
+                 alt="هيلو كيتي خجولة"
+                 onerror="this.src='https://via.placeholder.com/200x200/fff0f5/ff69b4?text=Shy+Kitty'">
             <p>بس مستحي أسألك إياه 🙈</p>
             <button class="btn" onclick="nextPage(4)">اسألني! 😠</button>
         </div>
 
+        <!-- الصفحة 4: السؤال الحاسم + زر لا الهارب -->
         <div id="page4" class="page hidden">
-            <img src="https://media.giphy.com/media/MDJ9IbxxvDuQM/giphy.gif">
+            <img src="https://i.pinimg.com/originals/c8/7b/5f/c87b5f4e3d2c1b0a9f8e7d6c5b4a3f2e.png" 
+                 alt="هيلو كيتي متسائلة"
+                 onerror="this.src='https://via.placeholder.com/200x200/ffe4f0/ff69b4?text=Kitty+Question'">
             <h2>تحبين مصطفى لو لا؟! 🤨</h2>
-            <div style="display: flex; gap: 15px; justify-content: center; width: 100%; min-height: 80px; align-items: center;">
+            <div style="display: flex; gap: 15px; flex-wrap: wrap; justify-content: center; min-height: 100px; align-items: center; width: 100%;">
                 <button class="btn" onclick="nextPage(5)">أي أحبه ❤️</button>
-                <button class="btn" id="noBtn" ontouchstart="moveBtn()" onmouseover="moveBtn()" onclick="moveBtn()">لا ❌</button>
+                <button class="btn" id="noBtn" ontouchstart="flee(event)" onmouseover="flee(event)" onclick="flee(event)">لا ❌</button>
             </div>
         </div>
 
+        <!-- الصفحة 5: دوسي على القلب -->
         <div id="page5" class="page hidden">
-            <img src="https://media.giphy.com/media/3o7TKoWXlo3M1nKSgU/giphy.gif">
+            <img src="https://i.pinimg.com/originals/1e/9a/8d/1e9a8d7c6b5a4f3e2d1c0b9a8f7e6d5c.png" 
+                 alt="هيلو كيتي مع قلب"
+                 onerror="this.src='https://via.placeholder.com/200x200/ffc0cb/ff69b4?text=Kitty+Heart'">
             <p>دوسي على القلب 👇</p>
             <div class="heart-btn" onclick="startHearts(); nextPage(6)">❤️</div>
         </div>
 
+        <!-- الصفحة 6: النهاية مع القصيدة والقلوب -->
         <div id="page6" class="page hidden">
             <div class="final-text">
-                رقت بوصف جمالك الأقوال.. ورأتك فافتتنت بك العذّال<br>
+                رقت بوصف جمالك الأقوال.. ورأيتك فافتتنت بك العذّال<br>
                 ومن الإله بك الجمال تجملاً.. حتى كأنك للجمال جمال<br><br>
                 أحبك واهم شي مو بكيفج تختارين لا لان كلشي بكيفي اني بس يا آية ❤️
             </div>
-            <p style="font-weight: bold; margin-top: 15px;">من مصطفى إلى آية 🧸</p>
-            <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExbmZ6ODNidm9reG50Z3Fid3BqZ3BqZ3BqZ3BqZ3BqZ3BqZ3BqJmVwPXYxX2ludGVybmFsX2dpZl9ieV9pZCZjdD1z/fN9AdT725BwXU5e89V/giphy.gif" style="width: 100px;">
+            <p style="font-weight: bold; margin-top: 15px; color: #b0306e;">من مصطفى إلى آية 🧸</p>
+            <img src="https://i.pinimg.com/originals/3d/4b/8a/3d4b8a7f6e5d4c3b2a1f0e9d8c7b6a5f.png" 
+                 alt="هيلو كيتي مع هدية"
+                 onerror="this.src='https://via.placeholder.com/200x200/ffe4ec/ff69b4?text=Kitty+Gift'"
+                 style="width: 120px;">
         </div>
     </div>
 
     <script>
-        function nextPage(n) {
-            document.querySelectorAll('.page').forEach(p => p.classList.add('hidden'));
-            document.getElementById('page' + n).classList.remove('hidden');
-        }
+        (function() {
+            "use strict";
 
-        function moveBtn() {
-            const b = document.getElementById('noBtn');
-            const maxX = window.innerWidth - b.offsetWidth - 20;
-            const maxY = window.innerHeight - b.offsetHeight - 20;
-            const randomX = Math.max(10, Math.floor(Math.random() * maxX));
-            const randomY = Math.max(10, Math.floor(Math.random() * maxY));
-            b.style.position = 'fixed';
-            b.style.left = randomX + 'px';
-            b.style.top = randomY + 'px';
-        }
+            // === إدارة الصفحات ===
+            window.nextPage = function(pageNumber) {
+                const pages = document.querySelectorAll('.page');
+                pages.forEach(p => p.classList.add('hidden'));
+                const nextPage = document.getElementById('page' + pageNumber);
+                if (nextPage) {
+                    nextPage.classList.remove('hidden');
+                }
+                // إذا وصلنا للصفحة الأخيرة، نضمن تشغيل القلوب مسبقًا (اختياري)
+                if (pageNumber === 6) {
+                    // يمكن إضافة شيء
+                }
+            };
 
-        function startHearts() {
-            setInterval(() => {
-                const heart = document.createElement('div');
-                heart.innerHTML = '❤️';
-                heart.className = 'heart-particle';
-                heart.style.left = Math.random() * 100 + 'vw';
-                heart.style.animationDuration = (Math.random() * 2 + 3) + 's';
-                document.body.appendChild(heart);
-                setTimeout(() => heart.remove(), 5000);
-            }, 300);
-        }
+            // === زر "لا" الهارب ===
+            window.flee = function(event) {
+                const btn = document.getElementById('noBtn');
+                if (!btn) return;
+
+                // منع السلوك الافتراضي (مثل النقر)
+                event.preventDefault();
+                event.stopPropagation();
+
+                // الحصول على أبعاد النافذة والزر
+                const winW = window.innerWidth;
+                const winH = window.innerHeight;
+                const btnW = btn.offsetWidth;
+                const btnH = btn.offsetHeight;
+
+                // حساب أقصى إحداثيات ممكنة (مع ترك هامش 10px)
+                const maxX = winW - btnW - 20;
+                const maxY = winH - btnH - 20;
+
+                // أرقام عشوائية ضمن الحدود
+                let randomX = Math.floor(Math.random() * Math.max(10, maxX));
+                let randomY = Math.floor(Math.random() * Math.max(10, maxY));
+
+                // التأكد من عدم خروج الزر عن الشاشة
+                randomX = Math.max(5, Math.min(randomX, winW - btnW - 5));
+                randomY = Math.max(5, Math.min(randomY, winH - btnH - 5));
+
+                // تطبيق الوضعية الثابتة والموقع الجديد
+                btn.style.position = 'fixed';
+                btn.style.left = randomX + 'px';
+                btn.style.top = randomY + 'px';
+                btn.style.zIndex = '10000';
+            };
+
+            // === نظام القلوب المتساقطة (خفيف ومحسن) ===
+            let heartInterval = null;
+            window.startHearts = function() {
+                // إذا كان هناك إنترفال سابق نوقفه (تجنب التراكم)
+                if (heartInterval) clearInterval(heartInterval);
+
+                heartInterval = setInterval(() => {
+                    const heart = document.createElement('div');
+                    heart.innerHTML = '❤️';
+                    heart.className = 'heart-particle';
+                    // قيمة عشوائية لليسار
+                    heart.style.left = Math.random() * 100 + '%';
+                    // سرعة عشوائية بين 2.5 و 5 ثواني
+                    const duration = (Math.random() * 2.5 + 2.8).toFixed(2);
+                    heart.style.animationDuration = duration + 's';
+                    // حجم عشوائي قليلاً
+                    const scale = 0.7 + Math.random() * 0.6;
+                    heart.style.fontSize = (20 * scale) + 'px';
+                    document.body.appendChild(heart);
+
+                    // إزالة القلب بعد انتهاء مدة الحركة + 100ms
+                    setTimeout(() => {
+                        if (heart.parentNode) heart.remove();
+                    }, duration * 1000 + 100);
+                }, 280); // تردد معقول
+            };
+
+            // اختياري: إيقاف القلوب عند مغادرة الصفحة الأخيرة (لن تحتاج لكن للتحسين)
+            // يمكن رصده عبر MutationObserver لكنه تعقيد. سنكتفي بوقف الانترفال عند الضرورة.
+
+            // نضمن عدم تشغيل أكثر من إنترفال عند الضغط المتكرر على القلب
+            // لكن startHearts ينظف نفسه.
+
+            // === تحسين تجربة اللمس والحركة: عند تغيير حجم الشاشة أو التمرير، لا نريد بقاء الزر في مكانه خارج الإطار ===
+            window.addEventListener('resize', function() {
+                const btn = document.getElementById('noBtn');
+                // إذا كان الزر في وضع fixed (أي هارب)، نعيد ضبط موقعه ليبقى داخل الشاشة
+                if (btn && btn.style.position === 'fixed') {
+                    const winW = window.innerWidth;
+                    const winH = window.innerHeight;
+                    const btnW = btn.offsetWidth;
+                    const btnH = btn.offsetHeight;
+                    let left = parseFloat(btn.style.left) || 0;
+                    let top = parseFloat(btn.style.top) || 0;
+
+                    // التأكد من الحدود
+                    left = Math.max(5, Math.min(left, winW - btnW - 5));
+                    top = Math.max(5, Math.min(top, winH - btnH - 5));
+
+                    btn.style.left = left + 'px';
+                    btn.style.top = top + 'px';
+                }
+            });
+
+            // منع النقر على الزر "لا" من تنفيذ أي شيء آخر (مثل الانتقال)
+            document.getElementById('noBtn')?.addEventListener('click', (e) => e.preventDefault());
+            document.getElementById('noBtn')?.addEventListener('touchstart', (e) => e.preventDefault());
+
+            // إخفاء القلوب إذا تم فتح صفحة غير الأخيرة (اختياري، نقوم بمسحها عند الطلب)
+            // يمكن إضافة زر لإيقاف القلوب لكن غير مطلوب.
+
+            // تحسين بسيط: إزالة القلوب عند الانتقال من الصفحة الأخيرة (إذا أراد المستخدم العودة)
+            // نراقب تغيير الصفحات ونوقف القلوب إذا لم نعد في الصفحة 6.
+            const originalNextPage = window.nextPage;
+            window.nextPage = function(n) {
+                // إيقاف القلوب إذا لم نكن في الصفحة 6
+                if (n !== 6 && heartInterval) {
+                    clearInterval(heartInterval);
+                    heartInterval = null;
+                }
+                // استدعاء الدالة الأصلية
+                originalNextPage(n);
+            };
+
+        })();
     </script>
+
+    <!-- دعم إضافي لكتم صوت أي تفاعلات غير مرغوب فيها -->
+    <noscript>JavaScript مطلوب لتجربة أفضل</noscript>
 </body>
 </html>
